open-webui/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`open-webui.prd.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: open-webui
      port: 8080
  tls:
    secretName: open-webui-tls

---

kind: Service
apiVersion: v1
metadata:
  name: open-webui-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: open-webui.prd.durp.info
spec:
  type: ExternalName
  externalName: prd.durp.info
